# Uno

./: README.md
backend/: .gitignore  README.md
backend/game/: README.md  app.py  requirement.txt  start.sh
backend/game/env/: pyvenv.cfg
backend/game/env/Scripts/: activate  activate.bat
backend/game/features/steps/: steps.py
backend/game/tests/: conftest.py
backend/game/tests/atdd/: test_hello.py  test_scenario_1.py
backend/game/tests/model/: test_card.py  test_deck.py  test_game.py
backend/game/uno/: test2.py  test3.py
backend/game/uno/model/: card.py  deck.py  discard_pile.py  drawpile.py  game.py  game_repository.py  player.py  player_repository.py  uno_error.py
backend/game/uno/repository/: base_repository_memory_impl.py  deck_repository_in_memory_impl.py  game_repository_in_memory_impl.py  player_repository_in_memory_impl.py
backend/game/uno/usecase/: base_repository.py  base_use_case.py  check_player_usecase.py  create_game_usecase.py  deck_repository.py  game_repository.py  get_all_usecase.py  (+7 more)
backend/uno/: .gitignore  README.md  pyproject.toml
backend/uno/features/: game.feature
backend/uno/features/steps/: steps.py
backend/uno/src/model/: game.py
backend/uno/src/repository/: game_repository_in_memory_impl.py
backend/uno/src/usecase/: create_game_usecase.py
backend/uno/src/web/: app.py
backend/uno/tests/model/: test_game.py
doc/: README.md  asd.txt  yc_features.md
frontend/: README.md
frontend/uno-web/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/uno-web/src/: index.html  styles.scss
(+59 files in other folders)
